# MetaOpenEnvCropManagement

./: .dockerignore  .env.example  .gitignore  .openenvignore  AUDIT.md  Dockerfile  FUTURE_SCOPE_PCSE.md  IMPROVEMENT_PLAN.md  IssuesIdentified  Preparation  README.md  RLimprovementPlan.md  Samples  __init__.py  _analytics_task1.json  _analytics_task2.json  _analytics_task3.json  benchmark_sweep.py  client.py  hackathonBriefing.md  inference.py  issuesDetected.md  models.py  openenv.yaml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-smoke-test.yml  openenv-validate-and-repro.yml
_analytics_archive/: _analytics_task1.json  _analytics_task2.json  _analytics_task3.json
agent/: __init__.py  benchmark_sweep.py  inference.py  policy.py  training_adapter.py
configs/: wheat_iowa.yaml  wheat_nl.yaml  wheat_punjab.yaml
docs/: ARCHITECTURE.md  FUTURE_SCOPE_PCSE.md  HACKATHON_MASTER.md  HackathonSubmissionUpdates  PLAN_BF_LEACHING_SLOW_RELEASE.md  REFERENCES.md  SUBMISSION_READINESS.md
examples/: client_greedy_run.py  direct_benchmark.py
scripts/: ablation_study.py  baseline_repro_check.py  validate-submission.sh
server/: Dockerfile  __init__.py  advisory.py  app.py  constants.py  crop_params.py  crop_sim.py  environment.py  grader.py  reward.py  rubric.py  scenarios.py  tasks.py
tests/: test_integration.py  test_smoke.py  test_submission_surface.py  test_ws_episode.py
