[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-management"
version = "0.1.0"
description = "Precision agriculture crop management environment for the OpenEnv framework"
requires-python = ">=3.11"
dependencies = [
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "fastapi~=0.135.1",
    "pydantic~=2.12",
    "uvicorn~=0.41",
    "openai~=2.30",
    "httpx~=0.28",
    "python-dotenv~=1.2",
    "pyyaml~=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
server = "server.app:main"

# Setuptools: models.py, client.py are top-level modules
# alongside the `server` and `agent` packages.
[tool.setuptools.packages.find]
include = ["server*", "agent*"]

[tool.setuptools]
py-modules = ["models", "client"]
